# SudokuApp

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: SudokuCell.css  SudokuCell.tsx  SudokuGrid.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  last_grid  last_grid_locked  tauri.conf.json
src-tauri/src/: main.rs  solver.rs
src/Components/: CheckMessage.tsx  DarkModeToggle.tsx  NavBar.tsx  SudokuCell.tsx  SudokuGrid.tsx
src/Styles/: CheckMessage.css  DarkModeToggle.css  NavBar.css  SudokuCell.css  SudokuGrid.css  index.css
src/Util/: Util.ts
